--- a/package.json
+++ b/package.json
@@ -4,23 +4,74 @@
   "description": "A simple chat room using Sockets.io and React.",
   "main": "index.js",
   "scripts": {
-    "live:server": "NODE_ENV=development nodemon ./server/index"
+    "js": "NODE_ENV=development webpack --config webpack.config.dev.ts --progress --watch",
+    "live:server": "NODE_ENV=development nodemon ./server/index.js --exec babel-node './server/index.js'"
   },
   "author": "Craig Stroman",
   "license": "ISC",
   "dependencies": {
+    "@babel/cli": "^7.24.1",
+    "@babel/core": "^7.24.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/plugin-transform-async-to-generator": "^7.24.1",
+    "@babel/plugin-transform-modules-commonjs": "^7.24.1",
+    "@babel/plugin-transform-regenerator": "^7.24.1",
+    "@babel/plugin-transform-runtime": "^7.24.3",
+    "@babel/plugin-transform-typescript": "^7.24.1",
+    "@babel/preset-env": "^7.24.3",
+    "@babel/preset-react": "^7.24.1",
+    "@babel/preset-typescript": "^7.24.1",
+    "@babel/runtime": "^7.24.1",
+    "@reduxjs/toolkit": "^2.2.2",
+    "@types/node": "^20.11.30",
+    "@types/react": "^18.2.73",
+    "@types/react-dom": "^18.2.23",
+    "@types/react-fontawesome": "^1.6.8",
+    "@types/react-redux": "^7.1.33",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/redux-logger": "^3.0.13",
+    "@types/websocket": "^1.0.10",
+    "@typescript-eslint/eslint-plugin": "^7.4.0",
+    "@typescript-eslint/parser": "^7.4.0",
     "express": "^4.19.1",
     "pg": "^8.11.3",
     "pug": "^3.0.2",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
+    "react-router": "^6.22.3",
+    "react-router-dom": "^6.22.3",
+    "react-router-redux": "^4.0.8",
+    "redux": "^5.0.1",
     "sequelize": "^6.37.1",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.4.3"
   },
   "devDependencies": {
+    "@babel/node": "^7.23.9",
     "app-module-path": "^2.2.0",
+    "babel-loader": "^9.1.3",
     "dotenv": "^16.4.5",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-webpack-plugin": "^4.1.0",
+    "node-sass": "^9.0.0",
     "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
-    "webpack": "^5.91.0"
+    "sass": "^1.72.0",
+    "sass-loader": "^14.1.1",
+    "style-loader": "^3.3.4",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-middleware": "^7.2.0",
+    "webpack-hot-middleware": "^2.26.1"
   }
 }
