--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A simple chat room using Sockets.io and React.",
   "main": "index.js",
   "scripts": {
+    "scss": "sass server/views/scss/styles.scss --watch --style=compressed public/css/styles.css",
     "js": "NODE_ENV=development webpack --config webpack.config.dev.ts --progress --watch",
     "live:server": "NODE_ENV=development nodemon ./server/index.js --exec babel-node './server/index.js'"
   },
@@ -22,6 +23,10 @@
     "@babel/preset-react": "^7.24.1",
     "@babel/preset-typescript": "^7.24.1",
     "@babel/runtime": "^7.24.1",
+    "@fortawesome/fontawesome-free": "^6.5.1",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^2.2.2",
     "@types/node": "^20.11.30",
     "@types/react": "^18.2.73",
@@ -33,7 +38,14 @@
     "@types/websocket": "^1.0.10",
     "@typescript-eslint/eslint-plugin": "^7.4.0",
     "@typescript-eslint/parser": "^7.4.0",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "express": "^4.19.1",
+    "express-session": "^1.18.0",
+    "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
+    "passport-github2": "^0.1.12",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^8.11.3",
     "pug": "^3.0.2",
     "react": "^18.2.0",
@@ -52,6 +64,7 @@
     "@babel/node": "^7.23.9",
     "app-module-path": "^2.2.0",
     "babel-loader": "^9.1.3",
+    "css-loader": "^6.10.0",
     "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
