--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "@types/react-redux": "^7.1.33",
     "@types/react-router-dom": "^5.3.3",
     "@types/redux-logger": "^3.0.13",
+    "@types/socket.io-client": "^3.0.0",
     "@types/websocket": "^1.0.10",
     "@typescript-eslint/eslint-plugin": "^7.4.0",
     "@typescript-eslint/parser": "^7.4.0",
+    "axios": "^1.6.8",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "express": "^4.19.1",
@@ -57,6 +59,7 @@
     "redux": "^5.0.1",
     "sequelize": "^6.37.1",
     "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "ts-loader": "^9.5.1",
     "typescript": "^5.4.3"
   },
