--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "scss": "sass server/views/scss/styles.scss --watch --style=compressed public/css/styles.css",
-    "js": "NODE_ENV=development webpack --config webpack.config.dev.ts --progress --watch",
+    "js": "NODE_ENV=development webpack --config webpack.config.dev.ts  --progress --watch",
     "live:server": "NODE_ENV=development nodemon ./server/index.js --exec babel-node './server/index.js'"
   },
   "author": "Craig Stroman",
@@ -42,6 +42,7 @@
     "axios": "^1.6.8",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
+    "dotenv-webpack": "^8.1.0",
     "express": "^4.19.1",
     "express-session": "^1.18.0",
     "passport": "^0.7.0",
@@ -69,6 +70,7 @@
     "babel-loader": "^9.1.3",
     "css-loader": "^6.10.0",
     "dotenv": "^16.4.5",
+    "error-overlay-webpack-plugin": "^1.1.1",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.1.0",
