--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "axios": "^1.6.8",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv-webpack": "^8.1.0",
     "express": "^4.19.1",
     "express-session": "^1.18.0",
