--- a/package.json
+++ b/package.json
@@ -4,24 +4,18 @@
   "description": "A simple chat room using Sockets.io and React.",
   "main": "index.js",
   "scripts": {
+    "start": "NODE_ENV=production node ./build/index.js",
     "scss": "sass server/views/scss/styles.scss --watch --style=compressed public/css/styles.css",
     "js": "NODE_ENV=development webpack --config webpack.config.dev.ts  --progress --watch",
-    "live:server": "NODE_ENV=development nodemon ./server/index.js --exec babel-node './server/index.js'"
+    "live:server": "NODE_ENV=development nodemon ./server/index.js --exec babel-node './server/index.js'",
+    "prod:client": "NODE_ENV=production webpack --config webpack.config.prod.ts & npm run copy-files:client",
+    "prod:server": "babel -d ./build ./server -s & npm run copy-files:server"
   },
   "author": "Craig Stroman",
   "license": "ISC",
   "dependencies": {
     "@babel/cli": "^7.24.1",
     "@babel/core": "^7.24.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
-    "@babel/plugin-transform-async-to-generator": "^7.24.1",
-    "@babel/plugin-transform-modules-commonjs": "^7.24.1",
-    "@babel/plugin-transform-regenerator": "^7.24.1",
-    "@babel/plugin-transform-runtime": "^7.24.3",
-    "@babel/plugin-transform-typescript": "^7.24.1",
-    "@babel/preset-env": "^7.24.3",
-    "@babel/preset-react": "^7.24.1",
-    "@babel/preset-typescript": "^7.24.1",
     "@babel/runtime": "^7.24.1",
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
@@ -67,9 +61,19 @@
     "typescript": "^5.4.3"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/plugin-transform-async-to-generator": "^7.24.1",
+    "@babel/plugin-transform-modules-commonjs": "^7.24.1",
+    "@babel/plugin-transform-regenerator": "^7.24.1",
+    "@babel/plugin-transform-runtime": "^7.24.3",
+    "@babel/plugin-transform-typescript": "^7.24.1",
+    "@babel/preset-env": "^7.24.3",
+    "@babel/preset-react": "^7.24.1",
+    "@babel/preset-typescript": "^7.24.1",
     "@babel/node": "^7.23.9",
     "app-module-path": "^2.2.0",
     "babel-loader": "^9.1.3",
+    "copyfiles": "^2.4.1",
     "css-loader": "^6.10.0",
     "dotenv": "^16.4.5",
     "error-overlay-webpack-plugin": "^1.1.1",
